[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player Files/8bitPlayer/8bitPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Character Sprites/m16/m16.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Player Files/8bitPlayer/M16.gd" type="Script" id=3]
[ext_resource path="res://ParticleEffects/GreyscaleShader.tres" type="Material" id=4]
[ext_resource path="res://Character Sprites/m16/m16dash.png" type="Texture" id=5]
[ext_resource path="res://addons/godot-next/gui/debug_label.gd" type="Script" id=6]

[node name="M16" instance=ExtResource( 1 )]
script = ExtResource( 3 )
dash_multiplier = 3.0

[node name="Sprite" parent="." index="0"]
frames = ExtResource( 2 )
animation = "Dash"
frame = 3

[node name="AfterImage1" type="Sprite" parent="Sprite" index="0"]
modulate = Color( 0.788235, 0.788235, 0.788235, 0.54902 )
show_behind_parent = true
material = ExtResource( 4 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 40, 32 )

[node name="AfterImage2" type="Sprite" parent="Sprite" index="1"]
modulate = Color( 0.788235, 0.788235, 0.788235, 0.305882 )
show_behind_parent = true
material = ExtResource( 4 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 40, 32 )

[node name="AfterImage3" type="Sprite" parent="Sprite" index="2"]
modulate = Color( 0.788235, 0.788235, 0.788235, 0.196078 )
show_behind_parent = true
material = ExtResource( 4 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 40, 32 )

[node name="DebugLabel" type="Label" parent="Sprite" index="3"]
margin_left = -84.2618
margin_top = -46.7194
margin_right = 34.7382
margin_bottom = -15.7194
rect_scale = Vector2( 0.25, 0.25 )
text = "oldPositions = null
"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
target_path = NodePath("../..")
properties = PoolStringArray( "oldPositions" )

[node name="Label" type="Label" parent="Sprite" index="4"]
margin_left = -83.2606
margin_top = -42.3812
margin_right = -28.2606
margin_bottom = -28.3812
rect_scale = Vector2( 0.5, 0.5 )
text = "Offset = "
__meta__ = {
"_edit_use_anchors_": false
}
